# CameraProject

./: .gitignore  build.gradle  settings.gradle
CameraLib/: CMakeLists.txt  build.gradle
CameraLib/src/androidTest/java/com/blade/cameralib/: ExampleInstrumentedTest.kt
CameraLib/src/main/: AndroidManifest.xml
CameraLib/src/main/cpp/: native-lib.cpp
CameraLib/src/main/java/com/blade/cameralib/: AutoFitSurfaceView.kt  CameraFragment.kt  CameraSizes.kt  CameraUtils.kt  CaptureResultData.kt  ExifUtils.kt  ImageViewerFragment.kt  OrientationLiveData.kt
CameraLib/src/main/java/com/blade/cameralib/fragment/: CameraFragment.kt  ImageViewerFragment.kt
CameraLib/src/main/java/com/blade/cameralib/utils/: AutoFitSurfaceView.kt  CameraSizes.kt  CameraUtils.kt  CaptureResultData.kt  ExifUtils.kt  MyGLSurfaceViewKt.kt  OrientationLiveData.kt
CameraLib/src/main/res/layout/: fragment_camera.xml  fragment_image_viewer.xml
CameraLib/src/test/java/com/blade/cameralib/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/blade/cameraproject/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/blade/cameraproject/: HomeFragment.kt  MainActivity.kt  MyCameraFragment.kt  MyImageViewerFragment.kt  PermissionsFragment.kt
app/src/main/java/com/blade/cameraproject/fragment/: HomeFragment.kt  MyCameraFragment.kt  (+2 more)
app/src/main/res/layout/: home_fragment.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/test/java/com/blade/cameraproject/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
